found the tags on the website for the individual actions

--- a/Firebase/firebase.html
+++ b/Firebase/firebase.html
@@ -20,4 +20,14 @@
 
     // Get a reference to the database service
     var database = firebase.database();
+
+
+    function writeUserData(userId, fname, lname, email, number) {
+    database.ref('Dearborn/' + userId).set({
+    firstname: fname,
+    lastname: lname,
+    email: email,
+    number : number,
+  });
+}
 </script>
